--- a/clientJs/src/App.css
+++ b/clientJs/src/App.css
@@ -1,42 +1,170 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  font-family: 'Inter' !important;
+  
+  overflow: auto;
+}
+
+:root {
+  --collection-1-border-og: rgba(204, 204, 204, 1);
+  --collection-1-dark-blue-normal: rgba(53, 64, 142, 1);
+  --collection-1-major: rgba(234, 147, 23, 1);
+  --collection-1-minor: rgba(252, 229, 167, 1);
+  --collection-1-negative: rgba(222, 69, 75, 1);
+  --collection-1-negative-weak: rgba(222, 69, 75, 0.75);
+  --collection-1-positive: rgba(79, 184, 159, 1);
+  --collection-1-stroke-weak: rgba(218, 218, 218, 1);
+  --collection-1-strong-fill: rgba(68, 136, 191, 1);
+  --collection-1-text-light: rgba(158, 163, 162, 0.45);
+  --collection-1-undocumented: rgba(216, 208, 208, 1);
+  --collection-1-weak-highlight: rgba(68, 136, 191, 0.16);
+  --collection-1-wf: rgba(203, 210, 224, 1);
+  --collection-1-wf-bg: rgba(237, 240, 247, 1);
+  --collection-1-wf-btn-dark: rgba(45, 54, 72, 1);
+  --collection-1-wf-text: rgba(160, 171, 192, 1);
+  --collection-1-wf-title: rgba(113, 125, 150, 1);
+  --collection-1-whity: rgba(68, 136, 191, 0.05);
+  --table-head-font-family: "DM Sans", Helvetica;
+  --table-head-font-size: 14px;
+  --table-head-font-style: normal;
+  --table-head-font-weight: 700;
+  --table-head-letter-spacing: 0px;
+  --table-head-line-height: 24px;
+}
+
+
+.menuHead {
+  z-index: 10;
+
+  /* padding: 32px 16px 40px 0px; */
+}
+
+
+.iconNu {
+  height: 73px;
+  width: 248px;
+}
+
+.imageNu {
+  transition: all 0.1s ease-in-out;
+  width:100%;
+  object-fit:fill;
+
+}
+.sidebr{
+  display: flex;
+  border: 1px solid !important;
+  border-color: #d4d4d4 !important;
+  gap:40px !important;
+  /* background-color: aqua; */
+}
+
+.menuItem > * {
+  background-color: transparent !important;
+  padding-left: 16px !important;
+}
+
+.menuItem:hover{
+  background-color: var(--collection-1-whity);
+}
+
+.box {
+
+  height: 66px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  
+}
+.box .rectangle {
+  background-color: var(--collection-1-strong-fill);
+  border-radius: 4px 0px 0px 4px;
+  height: 100%;
+  width: 3px;
+}
+
+.menuItem {
+  position: relative;
+}
+
+
+.label .text-wrapper {
+  color: #000626e6;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 40px;
+  font-weight: 400;
+  left: 0;
+  letter-spacing: -0.50px;
+  line-height: 48px;
+  position: relative;
+  top: 0;
+  width: 100%;
+}
+
+.cv-group-stat {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+  padding: 0px 24px;
+  position: relative;
+  width: 328px;
+}
+
+.cv-group-stat .frame {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex: 0 0 auto;
+  gap: 8px;
+  position: relative;
+  width: 100%;
+}
+
+.cv-group-stat .text-wrapper {
+  color: var(--colours-semantic-text-weak);
+  flex: 1;
+  font-family: var(--tiny-regular-font-family);
+  font-size: var(--tiny-regular-font-size);
+  font-style: var(--tiny-regular-font-style);
+  font-weight: var(--tiny-regular-font-weight);
+  height: 21px;
+  letter-spacing: var(--tiny-regular-letter-spacing);
+  line-height: var(--tiny-regular-line-height);
+  margin-top: -1.00px;
+  position: relative;
   text-align: center;
+  white-space: nowrap;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cv-group-stat .div {
+  color: var(--colours-semantic-text-strong);
+  flex: 1;
+  font-family: var(--tiny-regular-font-family);
+  font-size: var(--tiny-regular-font-size);
+  font-style: var(--tiny-regular-font-style);
+  font-weight: var(--tiny-regular-font-weight);
+  height: 21px;
+  letter-spacing: var(--tiny-regular-letter-spacing);
+  line-height: var(--tiny-regular-line-height);
+  margin-top: -1.00px;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.cv-group-stat .text-wrapper-2 {
+  color: var(--collection-1-negative);
+  flex: 1;
+  font-family: var(--tiny-regular-font-family);
+  font-size: var(--tiny-regular-font-size);
+  font-style: var(--tiny-regular-font-style);
+  font-weight: var(--tiny-regular-font-weight);
+  height: 21px;
+  letter-spacing: var(--tiny-regular-letter-spacing);
+  line-height: var(--tiny-regular-line-height);
+  margin-top: -1.00px;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
 }
